[package]
name = "SSRedirector"
version = "0.1.0"
edition = "2024"

[lib]
name = "version"
crate-type = ["cdylib"]

[dependencies]
detours-rs = "0.2.0"
rust-ini = "0.21.3"
windows = { version = "0.62.2", features = ["Win32", "Win32_Storage", "Win32_System", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_System_SystemInformation", "Win32_System_Memory", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_Globalization"] }
